fix: wrong color used for the secondary button

--- a/views/scss/inc/solar/_buttons.scss
+++ b/views/scss/inc/solar/_buttons.scss
@@ -120,7 +120,7 @@ body.solar-design {
         }
 
         &.btn-warning {
-            color: var(--button-secondary-warning-color);
+            color: var(--button-primary-warning-color);
             background-color: var(--button-primary-warning-background);
             text-shadow: none;
             &:hover {
